unpackaged/main/default/objects/Case/fields/Account_State__c.field-meta.xml
<CustomField>
    <fullName>Account_State__c</fullName>
    <formula>Account.BillingState</formula>
    <label>Account State</label>
    <type>Text</type>
</CustomField>