unpackaged/main/default/objects/Case/fields/Actual_Proof__c.field-meta.xml
<CustomField>
    <fullName>Actual_Proof__c</fullName>
    <label>Actual Proof</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>