unpackaged/main/default/objects/Case/fields/Additional_Investigation_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Investigation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Investigation Required</label>
    <type>Checkbox</type>
</CustomField>