unpackaged/main/default/objects/Case/fields/All_Sub_Cases_Closed__c.field-meta.xml
<CustomField>
    <fullName>All_Sub_Cases_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that all sub cases of recordtype "Order claim sub case" are closed.</description>
    <label>All Sub Cases Closed</label>
    <type>Checkbox</type>
</CustomField>