unpackaged/main/default/objects/Case/fields/Analyst__c.field-meta.xml
<CustomField>
    <fullName>Analyst__c</fullName>
    <label>Analyst</label>
    <length>255</length>
    <type>Text</type>
</CustomField>