unpackaged/main/default/objects/Case/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Date that the case was approved on. This field is used by Compliance</description>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>