unpackaged/main/default/objects/Case/fields/Automated_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Automated_Notification_Email__c</fullName>
    <label>Automated Notification Email</label>
    <type>Email</type>
</CustomField>