unpackaged/main/default/objects/Case/fields/Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>Availability_Date__c</fullName>
    <label>Availability Date</label>
    <type>Date</type>
</CustomField>