unpackaged/main/default/objects/Case/fields/Available_States__c.field-meta.xml
<CustomField>
    <fullName>Available_States__c</fullName>
    <description>A multi-select picklist that stores the available states for a Case. Used to determine which states are available for a Compliance Case.</description>
    <label>Available States</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>