unpackaged/main/default/objects/Case/fields/Barrel__c.field-meta.xml
<CustomField>
    <fullName>Barrel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Barrel</label>
    <referenceTo>Barrel__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>