unpackaged/main/default/objects/Case/fields/Barrel_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>Barrel Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>