unpackaged/main/default/objects/Case/fields/Barrel_Ready_to_Enter_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Ready_to_Enter_Case_Number__c</fullName>
    <label>Barrel Ready to Enter Case Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>