unpackaged/main/default/objects/Case/fields/Beam_SKU__c.field-meta.xml
<CustomField>
    <fullName>Beam_SKU__c</fullName>
    <label>Beam SKU</label>
    <length>10</length>
    <type>Text</type>
</CustomField>