unpackaged/main/default/objects/Case/fields/Beam_Suntory_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Beam_Suntory_Item_Number__c</fullName>
    <label>Beam Suntory Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>