unpackaged/main/default/objects/Case/fields/Beam_Suntory_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Beam_Suntory_Order_Number__c</fullName>
    <label>Beam Suntory Order Number</label>
    <type>TextArea</type>
</CustomField>