unpackaged/main/default/objects/Case/fields/Bill_of_Lading__c.field-meta.xml
<CustomField>
    <fullName>Bill_of_Lading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill of Lading?</label>
    <type>Checkbox</type>
</CustomField>