unpackaged/main/default/objects/Case/fields/Billing_SAP_number_missing__c.field-meta.xml
<CustomField>
    <fullName>Billing_SAP_number_missing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Billing SAP number is required on child case records with a record type of Order Claim Sub Case and a specific claim type, but this field is only filled out once the parent case of record type Order Claim is ready to be closed. If this field is set to true then the child cases are missing certain fields.</description>
    <label>Billing SAP number missing</label>
    <type>Checkbox</type>
</CustomField>