unpackaged/main/default/objects/Case/fields/Bottle_Text_Entered__c.field-meta.xml
<CustomField>
    <fullName>Bottle_Text_Entered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bottle Text Entered</label>
    <type>Checkbox</type>
</CustomField>