unpackaged/main/default/objects/Case/fields/Brand_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Brand_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PS MC SB-16 to maintain against which allocation this Barrel is provided</description>
    <label>Brand Allocation</label>
    <referenceTo>Brand_Allocation__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>