unpackaged/main/default/objects/Case/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>