unpackaged/main/default/objects/Case/fields/Case_Closed_from_CaseCloseAttachmentPage__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_from_CaseCloseAttachmentPage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will help us to understand where from the Case is closed.</description>
    <label>Case Closed from CaseCloseAttachmentPage</label>
    <type>Checkbox</type>
</CustomField>