unpackaged/main/default/objects/Case/fields/Case_Country__c.field-meta.xml
<CustomField>
    <fullName>Case_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>