unpackaged/main/default/objects/Case/fields/Case_Issues__c.field-meta.xml
<CustomField>
    <fullName>Case_Issues__c</fullName>
    <label>Case Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Issue</fullName>
            </value>
            <value>
                <fullName>Obsolete Item</fullName>
            </value>
            <value>
                <fullName>Overweight</fullName>
            </value>
            <value>
                <fullName>Missing Carrier</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Incoterms</fullName>
            </value>
            <value>
                <fullName>Wrong Plant</fullName>
            </value>
            <value>
                <fullName>Allocation</fullName>
            </value>
            <value>
                <fullName>Pricing (YPOU)</fullName>
            </value>
            <value>
                <fullName>CMIR</fullName>
            </value>
            <value>
                <fullName>Costing (YMTP)</fullName>
            </value>
            <value>
                <fullName>Price Discrepancy</fullName>
            </value>
            <value>
                <fullName>Incorrect Shipping Date</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>